48
================

04/03/24 Update name of FoundAnimals -> Found/24Pet in publishing history
04/03/24 Add html_events service call and docs #940
03/03/24 Fix csv import fault caused by use of named args
01/03/24 Add max filesize limit for document templates #1449
29/02/24 Include reclaim return counts on annual figures
29/02/24 Sort homecheck history by date desc
29/02/24 Entry type field not hiding correctly for non-shelter animals
29/02/24 Split addresses into line1/2/csv for chip registries that need it
29/02/24 Cat TNRs were being excluded from annual figures 
28/02/24 Check home phone for a similar cell in embedded add person
28/02/24 Handle exporting animal CSV PDF with no name
28/02/24 Remove confusing "merge duplicates" from csvimport
28/02/24 Add "Dead On Arrival" entry type and behaviour #1448
26/02/24 Ability to copy media to other records #1258
26/02/24 Allow doc repo files to be attached when emailing media #1434
25/02/24 Fix bug processing animal forms with no breed #1443
24/02/24 Escape animal names in option/value attribute of online forms
23/02/24 Include basic logo as part of default online form template #1342
21/02/24 Display a thumbnail for adoptable animals in online forms #1420
21/02/24 Set crossbreed when creating animals from online forms #1443
16/02/24 Verify signature data-uri is valid and contains at least a line #1438
16/02/24 Autoprocess: attach animal/create person no longer adds media to animal #1437
16/02/24 Option to attach form to animals without media #1437
16/02/24 Create->Animal (non-shelter with owner) form option #1131
12/02/24 Waiting list: option to set default removal in weeks #1416
12/02/24 Show a thumbnail in the animal chooser dialog
10/02/24 Fix clone_from_template overriding auto not for adoption option
09/02/24 Support for backup S3 provider #1423
08/02/24 "remember me" token with 2FA causing redirect loop #1433
08/02/24 Fix clone_from_template removing holds